--- a/covid_7day.ipynb
+++ b/covid_7day.ipynb
@@ -10,6 +10,9 @@
     "\n",
     "**The notebook pulls data from the Johns Hopkins [Data Repository](https://github.com/CSSEGISandData/COVID-19) of global Coronavirus COVID-19 cases**, and then does the following things:\n",
     "\n",
+    "- Gives the data in a series of grid views (Country, State, County)\n",
+    "- Gives the data in a series of charts (scroll to bottom)\n",
+    "\n",
     "\n",
     "## Important Caveats:\n",
     "\n",
@@ -25,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today's date: 2020-07-10 18:46:48.599167\n"
+      "Today's date: 2020-07-10 19:01:01.049312\n"
      ]
     }
    ],
