--- a/covid_7day.ipynb
+++ b/covid_7day.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today's date: 2020-07-30 08:01:29.562982\n"
+      "Today's date: 2020-07-30 08:07:45.563182\n"
      ]
     }
    ],
@@ -640,7 +640,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of confirmed California COVID-19 cases by county as of 7/29/20\n"
+      "Number of confirmed California cases as of 7/29/20\n"
      ]
     },
     {
@@ -744,7 +744,7 @@
     "stateCases, stateDs = get_cases_ds(principality, dfUSConfirmed, dfUSDeaths)\n",
     "\n",
     "casessummary, mostrecentdatecases = get_cases_summary(principality, stateCases, stateDs)\n",
-    "print('\\nNumber of confirmed ' + home_state + ' COVID-19 cases by county as of', mostrecentdatecases)\n",
+    "print('\\nNumber of confirmed ' + home_state + ' cases as of', mostrecentdatecases)\n",
     "casessummary\n"
    ]
   },
